--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,4 +5,8 @@
         android:title="@string/menu_logout_label"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item android:id="@+id/action_edit_friends"
+          android:title="@string/edit_friends_label"
+          android:orderInCategory="200"
+          android:showAsAction="never" />
 </menu>
