--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,12 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity" >
-    <item android:id="@+id/action_logout"
-        android:title="@string/menu_logout_label"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
     <item android:id="@+id/action_edit_friends"
           android:title="@string/edit_friends_label"
+          android:orderInCategory="100"
+          android:showAsAction="never" />
+    <item android:id="@+id/action_logout"
+          android:title="@string/menu_logout_label"
           android:orderInCategory="200"
           android:showAsAction="never" />
+    <item android:id="@+id/action_camera"
+          android:title="@string/menu_camera_label"
+          android:icon="@drawable/ic_action_camera"
+          android:showAsAction="always" />
 </menu>
