--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,91 +6,49 @@
     style="@style/AuthBackground">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/backgroundImage"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="@drawable/background"
-        android:scaleType="fitStart"
+        style="@style/AuthBackgroundImage"
         android:contentDescription="@string/content_desc_background"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
         android:id="@+id/title"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:textSize="60sp"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"/>
+        style="@style/AuthTitle"/>
+
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/subtitle"
         android:id="@+id/subtitle"
-        android:layout_below="@+id/title"
-        android:layout_centerHorizontal="true"
-        android:textSize="13sp"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"/>
+        android:text="@string/subtitle"
+        style="@style/AuthTitle.AuthSubTitle"/>
 
     <LinearLayout
         android:id="@+id/editTextLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@id/subtitle"
-        android:layout_marginTop="@dimen/login_vertical_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/login_horizontal_padding"
-        android:paddingLeft="@dimen/login_horizontal_padding"
-        android:paddingTop="@dimen/login_vertical_padding"
-        android:paddingBottom="@dimen/login_vertical_padding"
-        android:background="@android:color/white">
+        style="@style/AuthFieldContainer">
 
         <EditText
             android:id="@+id/usernameField"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
             android:hint="@string/username_hint"
-            android:textColorHint="@color/light_gray"
-            android:textSize="17sp"/>
+            style="@style/AuthEditText">
 
 
         <requestFocus/>
+        </EditText>
+
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
             android:id="@+id/passwordField"
+            android:inputType="textPassword"
             android:hint="@string/password_hint"
-            android:textColorHint="@color/light_gray"
-            android:textSize="17sp"/>
+            style="@style/AuthEditText"/>
+
+
 
 
     </LinearLayout>
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:text="@string/login_button"
         android:id="@+id/loginButton"
-        android:layout_below="@id/editTextLayout"
-        android:layout_alignParentLeft="true"
-        android:background="@drawable/button_custom"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:textSize="13sp"
-        android:textColor="@color/text_color"/>
+        style="@style/AuthButton"/>
 
 
     <TextView
